[tool.poetry]
name = "pit"
version = "0.1.0"
description = ""
authors = ["Jerom van der Sar <jerom.vandersar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
argh = "^0.26.2"
attrs = "^22.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
fs = "^2.4.16"

[tool.poetry.scripts]
pit = "pit:main"
pit-db = "pitdb:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
